[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/rewardQuestNode.gd" type="Script" id=1]

[node name="rewardQuestNode" type="GraphNode"]
margin_top = -0.949982
margin_right = 260.0
margin_bottom = 143.05
title = "Reward quest node"
show_close = true
resizable = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color( 1, 1, 1, 1 )
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color( 1, 1, 1, 1 )
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color( 1, 1, 1, 1 )
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color( 1, 1, 1, 1 )
slot/5/left_enabled = false
slot/5/left_type = 0
slot/5/left_color = Color( 1, 1, 1, 1 )
slot/5/right_enabled = false
slot/5/right_type = 0
slot/5/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 244.0
margin_bottom = 38.0
text = "Message"
align = 1

[node name="message" type="TextEdit" parent="."]
margin_left = 16.0
margin_top = 38.0
margin_right = 244.0
margin_bottom = 68.0
rect_min_size = Vector2( 0, 30 )

[node name="Label2" type="Label" parent="."]
margin_left = 16.0
margin_top = 69.0
margin_right = 244.0
margin_bottom = 83.0
text = "Souls to reward"
align = 1

[node name="soulsToReward" type="SpinBox" parent="."]
margin_left = 16.0
margin_top = 84.0
margin_right = 244.0
margin_bottom = 108.0

[node name="Label3" type="Label" parent="."]
margin_left = 16.0
margin_top = 109.0
margin_right = 244.0
margin_bottom = 123.0
text = "Object to reward"
align = 1

[node name="objectToReward" type="TextEdit" parent="."]
margin_left = 16.0
margin_top = 124.0
margin_right = 244.0
margin_bottom = 154.0
rect_min_size = Vector2( 0, 30 )
[connection signal="close_request" from="." to="." method="_on_rewardQuestNode_close_request"]
[connection signal="resize_request" from="." to="." method="_on_rewardQuestNode_resize_request"]
